# kaitai-rs

./: Cargo.toml
src/: expr.rs  ksy.rs  lib.rs  parser.lalrpop
tests/: parse-kaitai-lib.rs
